--- a/webapp/sfapp/templates/plan/technicien/demande_de_travaux.html.twig
+++ b/webapp/sfapp/templates/plan/technicien/demande_de_travaux.html.twig
@@ -32,8 +32,8 @@
         <div class="flex flex-row justify-between max-w-screen-xl mx-auto">
             <div>
                 {{ form_start(formSystemeAcqui) }}
-                    <label class="mb-2">{{ field_label(formSystemeAcqui.sa) }}</label>
-                    <select name="{{ field_name(formSystemeAcqui.sa) }}" id="selectSa" class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" onchange='this.form.submit()'>
+                    <label class="text-xl">{{ field_label(formSystemeAcqui.sa) }}</label>
+                    <select name="{{ field_name(formSystemeAcqui.sa) }}" id="selectSa" class="mt-4 bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" onchange='this.form.submit()'>
 
                         {% for label, value in field_choices(formSystemeAcqui.sa) %}
                          <option id="optionSA" value="{{ value }}">{{ label }}</option>
@@ -41,11 +41,11 @@
                     </select>
                 {{ form_end(formSystemeAcqui) }}
             </div>
-            <div class="mr-6">
+            <div class="flex flex-column-reverse">
                 {% if listeReleves is not null and not demandeTravaux.Terminee %}
                     <button
                         type="button"
-                        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
+                        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mt-[auto] dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 "
                         onclick="window.location.href='/plan/{{ demandeTravaux.getId }}/declarer-operationnel'"
                     >
                         Déclarer opérationnel
@@ -83,7 +83,7 @@
 
 
     <div class="max-w-screen-xl w-5/6 mx-auto">
-        <h2 class="mt-12 mb-4 text-3xl">Relevés</h2>
+        <h2 class="mt-12 mb-4 text-xl">Relevés</h2>
         {% if listeReleves is not null %}
             <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
                 <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
