Ajout script js pour vérification champs non vide

--- a/webapp/sfapp/templates/plan/charge_de_mission/modifier_salle.html.twig
+++ b/webapp/sfapp/templates/plan/charge_de_mission/modifier_salle.html.twig
@@ -123,5 +123,63 @@
         </div>
         {{ form_end(formSalle) }}
     </div>
+    <script>
+        let fenetre = document.getElementById('fenetre-input');
+        let porte = document.getElementById('porte-input');
+        let radios = document.querySelectorAll("[id='inline-radio']");
+        let decrements = document.querySelectorAll("[id='decrement-button']");
+        let increments = document.querySelectorAll("[id='increment-button']");
 
+        fenetre.addEventListener('input',verifierEntrees)
+        porte.addEventListener('input',verifierEntrees)
+        for(const radio of radios)
+        {
+            radio.addEventListener('input',verifierEntrees)
+        }
+        for(const decrement of decrements)
+        {
+            decrement.addEventListener('click',attendreVerifierEntrees)
+        }
+        for(const increment of increments)
+        {
+            increment.addEventListener('click',attendreVerifierEntrees)
+        }
+
+        function attendreVerifierEntrees()
+        {
+            setTimeout(function(){verifierEntrees()}, 100)
+        }
+
+        function verifierEntrees(){
+            let fenetre = document.getElementById('fenetre-input');
+            let porte = document.getElementById('porte-input');
+            let radios = document.querySelectorAll("[id='inline-radio']");
+
+            if(fenetre.value.length > 0 && porte.value.length > 0 && (radios[0].checked || radios[1].checked))
+            {
+                enableSubmitButton()
+            }
+            else
+            {
+                disableSubmitButton()
+            }
+        }
+
+        function enableSubmitButton(){
+            let button = document.getElementById("submit");
+            if (button.disabled){
+                button.disabled = false;
+                button.classList.remove("cursor-not-allowed");
+                button.classList.add("hover:bg-blue-800");
+            }
+        }
+        function disableSubmitButton(){
+            let button = document.getElementById("submit");
+            if (!button.disabled){
+                button.disabled = true;
+                button.classList.add("cursor-not-allowed");
+                button.classList.remove("hover:bg-blue-800");
+            }
+        }
+    </script>
 {% endblock %}
