--- a/webapp/sfapp/templates/plan/charge_de_mission/ajouter_salle.html.twig
+++ b/webapp/sfapp/templates/plan/charge_de_mission/ajouter_salle.html.twig
@@ -121,7 +121,7 @@
             </div>
             <div class="grid grid-cols-subgrid gap-4 col-span-3 mt-5">
                 <div class="mx-auto col-start-1">
-                    <button id="submit" type="submit" name="{{ field_name(formSalle.ajouter) }}" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                    <button id="submit" type="submit" disabled name="{{ field_name(formSalle.ajouter) }}" class="cursor-not-allowed text-white bg-blue-700 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
                         {{ field_label(formSalle.ajouter) }}</button>
                 </div>
             </div>
@@ -129,5 +129,71 @@
 
         {{ form_end(formSalle) }}
     </div>
+
+    <script>
+        let nom = document.getElementById('nom');
+        let batiment = document.getElementById('batiment');
+        let fenetre = document.getElementById('fenetre-input');
+        let porte = document.getElementById('porte-input');
+        let radios = document.querySelectorAll("[id='inline-radio']");
+        let decrements = document.querySelectorAll("[id='decrement-button']");
+        let increments = document.querySelectorAll("[id='increment-button']");
+
+        nom.addEventListener('input',verifierEntrees)
+        batiment.addEventListener('input',verifierEntrees)
+        fenetre.addEventListener('input',verifierEntrees)
+        porte.addEventListener('input',verifierEntrees)
+        for(const radio of radios)
+        {
+            radio.addEventListener('input',verifierEntrees)
+        }
+        for(const decrement of decrements)
+        {
+            decrement.addEventListener('click',attendreVerifierEntrees)
+        }
+        for(const increment of increments)
+        {
+            increment.addEventListener('click',attendreVerifierEntrees)
+        }
+
+        function attendreVerifierEntrees()
+        {
+            setTimeout(function(){verifierEntrees()}, 100)
+        }
+
+        function verifierEntrees(){
+            let nom = document.getElementById('nom');
+            let batiment = document.getElementById('batiment');
+            let fenetre = document.getElementById('fenetre-input');
+            let porte = document.getElementById('porte-input');
+            let radios = document.querySelectorAll("[id='inline-radio']");
+
+            if(nom.value.length > 0 && batiment.value.length > 0 && fenetre.value.length > 0 && porte.value.length > 0 && (radios[0].checked || radios[1].checked))
+            {
+                enableSubmitButton()
+            }
+            else
+            {
+                disableSubmitButton()
+            }
+        }
+
+        function enableSubmitButton(){
+            let button = document.getElementById("submit");
+            if (button.disabled){
+                button.disabled = false;
+                button.classList.remove("cursor-not-allowed");
+                button.classList.add("hover:bg-blue-800");
+            }
+        }
+        function disableSubmitButton(){
+            let button = document.getElementById("submit");
+            if (!button.disabled){
+                button.disabled = true;
+                button.classList.add("cursor-not-allowed");
+                button.classList.remove("hover:bg-blue-800");
+            }
+        }
+    </script>
 
 {% endblock %}
