ajout de la demande de réparation depuis la liste des sa

--- a/webapp/sfapp/templates/public/accueil.html.twig
+++ b/webapp/sfapp/templates/public/accueil.html.twig
@@ -74,7 +74,7 @@
             {# US Technicien : Consulter la liste des systèmes d'acquisition #}
                 <a href="/plan/lister-sa" id="Lister les sysytemes d'aquisition" class="mt-16">
                     <div class="w-64 h-64 flex flex-row justify-center items-center rounded-lg border-2 border-gray-900 shadow-lg">
-                        <box-icon name='stats' class="w-1/3 h-1/3"></box-icon>
+                        <box-icon type='solid' name='thermometer' class="w-1/3 h-1/3"></box-icon>
                     </div>
                     <h2 class="w-64 text-center mt-5 text-xl">Systemes d'acquisition</h2>
                 </a>
