simplifications code js verification champs non vide

--- a/webapp/sfapp/templates/plan/charge_de_mission/ajouter_salle.html.twig
+++ b/webapp/sfapp/templates/plan/charge_de_mission/ajouter_salle.html.twig
@@ -143,21 +143,11 @@
         batiment.addEventListener('input',verifierEntrees)
         fenetre.addEventListener('input',verifierEntrees)
         porte.addEventListener('input',verifierEntrees)
-        for(const radio of radios)
-        {
-            radio.addEventListener('input',verifierEntrees)
-        }
-        for(const decrement of decrements)
-        {
-            decrement.addEventListener('click',attendreVerifierEntrees)
-        }
-        for(const increment of increments)
-        {
-            increment.addEventListener('click',attendreVerifierEntrees)
-        }
+        for(const radio of radios) radio.addEventListener('input',verifierEntrees)
+        for(const decrement of decrements) decrement.addEventListener('click',attendreVerifierEntrees)
+        for(const increment of increments) increment.addEventListener('click',attendreVerifierEntrees)
 
-        function attendreVerifierEntrees()
-        {
+        function attendreVerifierEntrees() {
             setTimeout(function(){verifierEntrees()}, 100)
         }
 
@@ -168,14 +158,8 @@
             let porte = document.getElementById('porte-input');
             let radios = document.querySelectorAll("[id='inline-radio']");
 
-            if(nom.value.length > 0 && batiment.value.length > 0 && fenetre.value.length > 0 && porte.value.length > 0 && (radios[0].checked || radios[1].checked))
-            {
-                enableSubmitButton()
-            }
-            else
-            {
-                disableSubmitButton()
-            }
+            if(nom.value.length > 0 && batiment.value.length > 0 && fenetre.value.length > 0 && porte.value.length > 0 && (radios[0].checked || radios[1].checked)) enableSubmitButton()
+            else disableSubmitButton()
         }
 
         function enableSubmitButton(){
