--- a/webapp/sfapp/templates/base.html.twig
+++ b/webapp/sfapp/templates/base.html.twig
@@ -22,12 +22,12 @@
         <div class="flex flex-row justify-between">
                 <a href="/accueil" class="flex flex-wrap items-center justify-content mx-auto p-4">
                     <img src="/images/logo-univ.webp" class="h-16" alt="Logo Université de la Rochelle">
-                    <span class="ml-8 self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Smart Campus</span>
+                    <span class="ml-8 self-center lg:text-2xl text-4xl font-semibold whitespace-nowrap dark:text-white">Smart Campus</span>
                 </a>
             <div class="max-w-screen-xl flex flex-wrap items-center justify-content mx-auto p-4">
                 {% if app.user %}
 
-                    <a href="/deconnexion" class="mx-5 flex flex-row justify-center items-center gap-2 hover:underline"><box-icon name='exit'></box-icon> Déconnexion</a>
+                    <a href="/deconnexion" class="lg:text-md text-2xl mx-5 flex flex-row justify-center items-center gap-2 hover:underline"><box-icon class="lg:w-auto lg:h-auto lg:mt-3.5 w-8 h-8 mb-1" name='exit'></box-icon> Déconnexion</a>
 
                 {% endif %}
                 {% if nav_links is defined %}
