--- a/webapp/sfapp/templates/public/connexion.html.twig
+++ b/webapp/sfapp/templates/public/connexion.html.twig
@@ -7,37 +7,37 @@
         <nav class="flex" aria-label="Breadcrumb">
             <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
                 <li class="inline-flex items-center">
-                    <a href="/accueil" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
-                        <svg class="w-3 h-3 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                    <a href="/accueil" class="inline-flex items-center lg:text-sm text-2xl font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+                        <svg class="lg:w-3 lg:h-3 lg:me-2.5 w-6 h-6 me-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                             <path d="m19.707 9.293-2-2-7-7a1 1 0 0 0-1.414 0l-7 7-2 2a1 1 0 0 0 1.414 1.414L2 10.414V18a2 2 0 0 0 2 2h3a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h3a2 2 0 0 0 2-2v-7.586l.293.293a1 1 0 0 0 1.414-1.414Z"/>
                         </svg>
                         Accueil
                     </a>
                 </li>
                 <li>
-                    <div class="flex items-center">
-                        <svg class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                    <div class="flex items-center lg:text-sm text-2xl">
+                        <svg class="rtl:rotate-180 lg:w-3 lg:h-3 w-6 h-6 text-gray-400 mx-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
                         </svg>
-                        <a href="/connexion" class="ms-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">Connexion</a>
+                        <a href="/connexion" class="ms-1 lg:text-sm text-2xl font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">Connexion</a>
                     </div>
                 </li>
             </ol>
         </nav>
     </div>
     <main class="w-full flex flex-col items-center text-center">
-        <h1 class="text-4xl pb-12 text-center">Connexion</h1>
+        <h1 class="lg:text-4xl text-7xl pb-12 text-center">Connexion</h1>
 
         <form action="{{ path('app_connexion') }}" method="post" class=" flex flex-col">
-            <label for="identifiant" class="text-2xl mb-2">Identifiant</label>
-            <input type="text" id="identifiant" name="_username" value="{{ dernier_identifiant }}"  placeholder="Identifiant" class="border-none bg-gray-100 rounded p-3 rounded-lg">
+            <label for="identifiant" class="lg:text-2xl text-6xl mb-2">Identifiant</label>
+            <input type="text" id="identifiant" name="_username" value="{{ dernier_identifiant }}"  placeholder="Identifiant" class="lg:text-sm text-4xl border-none bg-gray-100 rounded p-3 rounded-lg lg:my-0 my-3">
 
-            <label for="mot_de_passe" class="text-2xl mt-6 mb-2">Mot de passe</label>
-            <input type="password" id="mot_de_passe" name="_password" placeholder="Mot de passe" class="border-none bg-gray-100 p-3 rounded-lg">
+            <label for="mot_de_passe" class="lg:text-2xl text-6xl mt-8 mb-2">Mot de passe</label>
+            <input type="password" id="mot_de_passe" name="_password" placeholder="Mot de passe" class="lg:text-sm text-4xl border-none bg-gray-100 p-3 rounded-lg lg:my-0 my-3">
 
             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authentificate') }}">
 
-            <button disabled type="submit" id="submit" class="cursor-not-allowed w-2/3 self-center text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 mt-5">Se connecter</button>
+            <button disabled type="submit" id="submit" class="cursor-not-allowed w-2/3 self-center text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg lg:text-sm text-3xl px-5 py-2.5 me-2 mb-2 mt-6 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 mt-5">Se connecter</button>
         </form>
         {% if erreur %}
             <p class="text-red-500 m-auto mt-16">Identifiant ou mot de passe invalides.</p>
