--- a/webapp/sfapp/assets/styles/app.scss
+++ b/webapp/sfapp/assets/styles/app.scss
@@ -4,6 +4,6 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-html, body {
+html {
   font-family: 'Roboto', sans-serif;
 }
